COMPILADORES/BASEdoTRABALHO/sintatico.output
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 10 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICO lista_comandos T_FIM

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: %empty
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | tipo lista_variaveis

    7 tipo: T_LOGICO
    8     | T_INTEIRO

    9 lista_variaveis: T_IDENTIF lista_variaveis
   10                | T_IDENTIF

   11 lista_comandos: %empty
   12               | comando lista_comandos

   13 comando: entrada_saida
   14        | repeticao
   15        | selecao
   16        | atribuicao

   17 entrada_saida: leitura
   18              | escrita

   19 leitura: T_LEIA T_IDENTIF

   20 escrita: T_ESCREVA expressao

   21 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQUANTO

   22 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   23 atribuicao: T_IDENTIF T_ATRIBUI expressao

   24 expressao: expressao T_MAIS expressao
   25          | expressao T_MENOS expressao
   26          | expressao T_VEZES expressao
   27          | expressao T_DIV expressao
   28          | expressao T_MAIOR expressao
   29          | expressao T_MENOR expressao
   30          | expressao T_IGUAL expressao
   31          | expressao T_NAO expressao
   32          | expressao T_OU expressao
   33          | expressao T_E expressao
   34          | termo

   35 termo: T_V
   36      | T_F
   37      | T_IDENTIF
   38      | T_NUMERO
   39      | T_NAO termo
   40      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_INICO (259) 1
    T_FIM (260) 1
    T_LEIA (261) 19
    T_ESCREVA (262) 20
    T_SE (263) 22
    T_ENTAO (264) 22
    T_SENAO (265) 22
    T_FIMSE (266) 22
    T_ENQTO (267) 21
    T_FACA (268) 21
    T_FIMENQUANTO (269) 21
    T_INTEIRO (270) 8
    T_LOGICO (271) 7
    T_MAIS (272) 24
    T_MENOS (273) 25
    T_VEZES (274) 26
    T_DIV (275) 27
    T_MAIOR (276) 28
    T_MENOR (277) 29
    T_IGUAL (278) 30
    T_NAO (279) 31 39
    T_OU (280) 32
    T_E (281) 33
    T_ATRIBUI (282) 23
    T_ABRE (283) 40
    T_FECHA (284) 40
    T_V (285) 35
    T_F (286) 36
    T_IDENTIF (287) 2 9 10 19 23 37
    T_NUMERO (288) 38


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 1
        on right: 0
    cabecalho (36)
        on left: 2
        on right: 1
    variaveis (37)
        on left: 3 4
        on right: 1
    declaracao_variaveis (38)
        on left: 5 6
        on right: 4 5
    tipo (39)
        on left: 7 8
        on right: 5 6
    lista_variaveis (40)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (41)
        on left: 11 12
        on right: 1 12 21 22
    comando (42)
        on left: 13 14 15 16
        on right: 12
    entrada_saida (43)
        on left: 17 18
        on right: 13
    leitura (44)
        on left: 19
        on right: 17
    escrita (45)
        on left: 20
        on right: 18
    repeticao (46)
        on left: 21
        on right: 14
    selecao (47)
        on left: 22
        on right: 15
    atribuicao (48)
        on left: 23
        on right: 16
    expressao (49)
        on left: 24 25 26 27 28 29 30 31 32 33 34
        on right: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 40
    termo (50)
        on left: 35 36 37 38 39 40
        on right: 34 39


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho . variaveis T_INICO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    8 tipo: T_INTEIRO .

    $default  reduce using rule 8 (tipo)


State 7

    7 tipo: T_LOGICO .

    $default  reduce using rule 7 (tipo)


State 8

    1 programa: cabecalho variaveis . T_INICO lista_comandos T_FIM

    T_INICO  shift, and go to state 11


State 9

    4 variaveis: declaracao_variaveis .

    $default  reduce using rule 4 (variaveis)


State 10

    5 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    6                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    1 programa: cabecalho variaveis T_INICO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 19
    comando         go to state 20
    entrada_saida   go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    selecao         go to state 25
    atribuicao      go to state 26


State 12

    9 lista_variaveis: T_IDENTIF . lista_variaveis
   10                | T_IDENTIF .

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 10 (lista_variaveis)

    lista_variaveis  go to state 27


State 13

    5 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    6                     | tipo lista_variaveis .

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 6 (declaracao_variaveis)

    declaracao_variaveis  go to state 28
    tipo                  go to state 10


State 14

   19 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 29


State 15

   20 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 36
    termo      go to state 37


State 16

   22 selecao: T_SE . expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 38
    termo      go to state 37


State 17

   21 repeticao: T_ENQTO . expressao T_FACA lista_comandos T_FIMENQUANTO

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 39
    termo      go to state 37


State 18

   23 atribuicao: T_IDENTIF . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 40


State 19

    1 programa: cabecalho variaveis T_INICO lista_comandos . T_FIM

    T_FIM  shift, and go to state 41


State 20

   12 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 42
    comando         go to state 20
    entrada_saida   go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    selecao         go to state 25
    atribuicao      go to state 26


State 21

   13 comando: entrada_saida .

    $default  reduce using rule 13 (comando)


State 22

   17 entrada_saida: leitura .

    $default  reduce using rule 17 (entrada_saida)


State 23

   18 entrada_saida: escrita .

    $default  reduce using rule 18 (entrada_saida)


State 24

   14 comando: repeticao .

    $default  reduce using rule 14 (comando)


State 25

   15 comando: selecao .

    $default  reduce using rule 15 (comando)


State 26

   16 comando: atribuicao .

    $default  reduce using rule 16 (comando)


State 27

    9 lista_variaveis: T_IDENTIF lista_variaveis .

    $default  reduce using rule 9 (lista_variaveis)


State 28

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 5 (declaracao_variaveis)


State 29

   19 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 19 (leitura)


State 30

   39 termo: T_NAO . termo

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    termo  go to state 43


State 31

   40 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 44
    termo      go to state 37


State 32

   35 termo: T_V .

    $default  reduce using rule 35 (termo)


State 33

   36 termo: T_F .

    $default  reduce using rule 36 (termo)


State 34

   37 termo: T_IDENTIF .

    $default  reduce using rule 37 (termo)


State 35

   38 termo: T_NUMERO .

    $default  reduce using rule 38 (termo)


State 36

   20 escrita: T_ESCREVA expressao .
   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54

    $default  reduce using rule 20 (escrita)


State 37

   34 expressao: termo .

    $default  reduce using rule 34 (expressao)


State 38

   22 selecao: T_SE expressao . T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_ENTAO  shift, and go to state 55
    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54


State 39

   21 repeticao: T_ENQTO expressao . T_FACA lista_comandos T_FIMENQUANTO
   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_FACA   shift, and go to state 56
    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54


State 40

   23 atribuicao: T_IDENTIF T_ATRIBUI . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 57
    termo      go to state 37


State 41

    1 programa: cabecalho variaveis T_INICO lista_comandos T_FIM .

    $default  reduce using rule 1 (programa)


State 42

   12 lista_comandos: comando lista_comandos .

    $default  reduce using rule 12 (lista_comandos)


State 43

   39 termo: T_NAO termo .

    $default  reduce using rule 39 (termo)


State 44

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao
   40 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54
    T_FECHA  shift, and go to state 58


State 45

   24 expressao: expressao T_MAIS . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 59
    termo      go to state 37


State 46

   25 expressao: expressao T_MENOS . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 60
    termo      go to state 37


State 47

   26 expressao: expressao T_VEZES . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 61
    termo      go to state 37


State 48

   27 expressao: expressao T_DIV . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 62
    termo      go to state 37


State 49

   28 expressao: expressao T_MAIOR . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 63
    termo      go to state 37


State 50

   29 expressao: expressao T_MENOR . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 64
    termo      go to state 37


State 51

   30 expressao: expressao T_IGUAL . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 65
    termo      go to state 37


State 52

   31 expressao: expressao T_NAO . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 66
    termo      go to state 37


State 53

   32 expressao: expressao T_OU . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 67
    termo      go to state 37


State 54

   33 expressao: expressao T_E . expressao

    T_NAO      shift, and go to state 30
    T_ABRE     shift, and go to state 31
    T_V        shift, and go to state 32
    T_F        shift, and go to state 33
    T_IDENTIF  shift, and go to state 34
    T_NUMERO   shift, and go to state 35

    expressao  go to state 68
    termo      go to state 37


State 55

   22 selecao: T_SE expressao T_ENTAO . lista_comandos T_SENAO lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 69
    comando         go to state 20
    entrada_saida   go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    selecao         go to state 25
    atribuicao      go to state 26


State 56

   21 repeticao: T_ENQTO expressao T_FACA . lista_comandos T_FIMENQUANTO

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 70
    comando         go to state 20
    entrada_saida   go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    selecao         go to state 25
    atribuicao      go to state 26


State 57

   23 atribuicao: T_IDENTIF T_ATRIBUI expressao .
   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54

    $default  reduce using rule 23 (atribuicao)


State 58

   40 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 40 (termo)


State 59

   24 expressao: expressao . T_MAIS expressao
   24          | expressao T_MAIS expressao .
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_NAO  shift, and go to state 52

    T_NAO     [reduce using rule 24 (expressao)]
    $default  reduce using rule 24 (expressao)


State 60

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   25          | expressao T_MENOS expressao .
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_NAO  shift, and go to state 52

    T_NAO     [reduce using rule 25 (expressao)]
    $default  reduce using rule 25 (expressao)


State 61

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   26          | expressao T_VEZES expressao .
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_NAO    shift, and go to state 52

    T_NAO     [reduce using rule 26 (expressao)]
    $default  reduce using rule 26 (expressao)


State 62

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   27          | expressao T_DIV expressao .
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_NAO    shift, and go to state 52

    T_NAO     [reduce using rule 27 (expressao)]
    $default  reduce using rule 27 (expressao)


State 63

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   28          | expressao T_MAIOR expressao .
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_NAO    shift, and go to state 52

    T_NAO     [reduce using rule 28 (expressao)]
    $default  reduce using rule 28 (expressao)


State 64

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   29          | expressao T_MENOR expressao .
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_NAO    shift, and go to state 52

    T_NAO     [reduce using rule 29 (expressao)]
    $default  reduce using rule 29 (expressao)


State 65

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   30          | expressao T_IGUAL expressao .
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_NAO    shift, and go to state 52

    T_NAO     [reduce using rule 30 (expressao)]
    $default  reduce using rule 30 (expressao)


State 66

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   31          | expressao T_NAO expressao .
   32          | expressao . T_OU expressao
   33          | expressao . T_E expressao

    T_MAIS   shift, and go to state 45
    T_MENOS  shift, and go to state 46
    T_VEZES  shift, and go to state 47
    T_DIV    shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_NAO    shift, and go to state 52
    T_OU     shift, and go to state 53
    T_E      shift, and go to state 54

    T_MAIS    [reduce using rule 31 (expressao)]
    T_MENOS   [reduce using rule 31 (expressao)]
    T_VEZES   [reduce using rule 31 (expressao)]
    T_DIV     [reduce using rule 31 (expressao)]
    T_MAIOR   [reduce using rule 31 (expressao)]
    T_MENOR   [reduce using rule 31 (expressao)]
    T_IGUAL   [reduce using rule 31 (expressao)]
    T_NAO     [reduce using rule 31 (expressao)]
    T_OU      [reduce using rule 31 (expressao)]
    T_E       [reduce using rule 31 (expressao)]
    $default  reduce using rule 31 (expressao)


State 67

   24 expressao: expressao . T_MAIS expressao
   25          | expressao . T_MENOS expressao
   26          | expressao . T_VEZES expressao
   27          | expressao . T_DIV expressao
   28          | expressao . T_MAIOR expressao
   29          | expressao . T_MENOR expressao
   30          | expressao . T_IGUAL expressao
   31          | expressao . T_NAO expressao
   32          | expressao . T_OU expressao
   32          | expressao T_OU expressao .
   33          | expressao . T_E expressao
